Fix Services li spacing

--- a/css/main.css
+++ b/css/main.css
@@ -222,7 +222,7 @@ h2 {
 
 @media screen and (min-width: 1200px) {
   .services__services-list li {
-    min-width: 30;
+    width: 400px;
   }
 }
 
